--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -46,3 +46,17 @@
 .disable-cross::-webkit-search-cancel-button,
 .disable-cross::-webkit-search-results-button,
 .disable-cross::-webkit-search-results-decoration { display: none; }
+
+.loader {
+  border: 1rem solid #F3F3F3; /* Light grey */
+  border-top: 1rem solid #3498DB; /* Blue */
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
